Fixing z-index to be higher

--- a/html/css/lifegraph.css
+++ b/html/css/lifegraph.css
@@ -163,13 +163,15 @@ body {
     left:10px;
     top:100px;
     width: 300px;
-    z-index: 1001;
+    z-index: 1005;
     display: none;
     overflow: visible;
 }
 
 #tour_card_content {
     height: 100%;
+    overflow: visible;
+    max-height: 100%;
 }
 
 #tour_next_btn {
